platform/kong/gateway-api/gatewayclass-kong.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong
  labels:
    banklab.konghq.com/managed-by: gitops
    banklab.konghq.com/platform-layer: gateway
    banklab.konghq.com/owner: platform-team
  annotations:
    konghq.com/gatewayclass-unmanaged: "true"
spec:
  controllerName: konghq.com/kic-gateway-controller
