platform/kong/gateway-api/gateway-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong-external
  namespace: platform-kong
  labels:
    banklab.konghq.com/managed-by: gitops
    banklab.konghq.com/platform-layer: gateway
    banklab.konghq.com/exposure: external
    banklab.konghq.com/owner: platform-team
spec:
  gatewayClassName: kong
  listeners:
    - name: http
      hostname: "*.external.banklab.test"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
